Implement sending of emails through relays